service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esprit-argo-app
  namespace: argocd
spec:
  selector:
    app: esprit-argo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 31393  # Dışarıya açılacak port
  type: NodePort  # LoadBalancer yerine NodePort
